# hifijson

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: bench.rs  cat.rs  count.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: all.rs  input.rs  iter_value.rs  slice_value.rs
src/: error.rs  escape.rs  ignore.rs  iterlexer.rs  lexer.rs  lib.rs  num.rs  parse.rs  read.rs  serde.rs  slicelexer.rs  str.rs  string.rs  strparser.rs  token.rs  validate.rs  value.rs  write.rs
tests/: serde.rs  tests.rs
