[package]
name = "hifijson"
version = "0.4.0"
edition = "2021"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
description = "High-fidelity JSON lexer and parser"
repository = "https://github.com/01mf02/hifijson"
license = "MIT"
keywords = ["json"]
categories = ["parser-implementations"]
rust-version = "1.56"

[features]
default = ["std", "alloc"]
std = []
alloc = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
memmap2 = "0.9"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
