[package]
name = "hifijson-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hifijson]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "slice-value"
path = "fuzz_targets/slice_value.rs"
test = false
doc = false

[[bin]]
name = "iter-value"
path = "fuzz_targets/iter_value.rs"
test = false
doc = false
